--- a/myworld/leaf/members/templates/register.html
+++ b/myworld/leaf/members/templates/register.html
@@ -157,7 +157,7 @@
 <body>
     <div class="container">
         <div class="logo-section">
-            <div class="logo">Leaf</div>
+            <img src="logo.png" alt="Leaf Logo" class="logo-img">
             <div class="slogan">YOUR GARDEN, YOUR WAY<br>FAST, EASY, NEARBY!</div>
         </div>
         <div class="form-container">
