--- a/myworld/leaf/members/templates/members_page.html
+++ b/myworld/leaf/members/templates/members_page.html
@@ -1,6 +1,5 @@
 {% load static %}
 
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -30,28 +29,18 @@
         .logo-section {
             flex: 1;
             text-align: center;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
         }
-        .logo {
-            font-size: 4em;
-            font-weight: bold;
-            color: #2e8b57;
-            text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
-            letter-spacing: 2px;
+        .logo-img {
+            width: 300px;
         }
-        .logo span {
-            position: relative;
-        }
-        .logo span::after {
-            content: '\1F331'; /* Leaf Emoji */
-            position: absolute;
-            font-size: 0.5em;
-            top: -10px;
-            right: -15px;
-        }
+
         .slogan {
-            font-size: 1.3em;
+            font-size: 1.2em;
             color: #333;
-            margin-top: 15px;
             font-weight: 500;
         }
         .menu {
@@ -87,18 +76,17 @@
             gap: 20px;
             margin-top: 25px;
         }
-        .social-icons a {
-            font-size: 1.5em;
-            text-decoration: none;
-            color: #2e8b57;
+        .social-icons a img {
+            width: 40px;
+            height: 40px;
             transition: transform 0.3s ease, color 0.3s ease;
         }
-        .social-icons a:hover {
-            color: #3aa76d;
+        .social-icons a:hover img {
             transform: scale(1.2);
+            filter: brightness(1.2);
         }
         @media (max-width: 900px) {
-            .container { 
+            .container {
                 flex-direction: column;
                 width: 95%;
                 padding: 30px 10px;
@@ -123,9 +111,15 @@
             <button onclick="location.href='#'">About Us</button>
             <button onclick="location.href='#'">Language</button>
             <div class="social-icons">
-                <a href="#">&#x1F426;</a> <!-- Facebook -->
-                <a href="#">&#x1F4F7;</a> <!-- Instagram -->
-                <a href="#">&#x1F5DE;</a> <!-- Twitter/X -->
+                <a href="https://facebook.com" target="_blank">
+                    <img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook">
+                </a>
+                <a href="https://instagram.com" target="_blank">
+                    <img src="https://cdn-icons-png.flaticon.com/512/733/733558.png" alt="Instagram">
+                </a>
+                <a href="https://twitter.com" target="_blank">
+                    <img src="https://cdn-icons-png.flaticon.com/512/5969/5969020.png" alt="Twitter / X">
+                </a>
             </div>
         </div>
     </div>
