--- a/myworld/leaf/members/templates/login.html
+++ b/myworld/leaf/members/templates/login.html
@@ -167,7 +167,7 @@
 <body>
     <div class="container">
         <div class="logo-section">
-            <img src="Logo.png" alt="Profile">
+            <img src="logo.png" alt="Profile">
             <div class="slogan">YOUR GARDEN, YOUR WAY<br>FAST, EASY, NEARBY!</div>
         </div>
         <div class="form-container">
