--- a/myworld/leaf/members/templates/change_password.html
+++ b/myworld/leaf/members/templates/change_password.html
@@ -205,7 +205,13 @@
 </head>
 <body>
     <div class="top-bar">
-        <a href="{% url 'dashboard' %}" class="logo">Leaf</a>
+        {% if site_settings.logo_url %}
+            <a href="{% url 'dashboard' %}" class="logo">
+                <img src="{{ site_settings.logo_url }}" alt="Leaf Logo" style="max-width: 150px; max-height: 60px;">
+            </a>
+        {% else %}
+            <a href="{% url 'dashboard' %}" class="logo">Leaf</a>
+        {% endif %}
         <div class="dashboard-title">Password Reset</div>
         <div class="profile-box">
             <div class="profile-info">
