--- a/myworld/leaf/members/templates/messages.html
+++ b/myworld/leaf/members/templates/messages.html
@@ -381,8 +381,14 @@
 </head>
 <body>
     <div class="top-bar">
-        <a href="{% url 'dashboard' %}" class="logo">Leaf</a>
-        <div class="page-title">Messages</div>
+            {% if site_settings.logo_url %}
+                <a href="{% url 'dashboard' %}" class="logo">
+                    <img src="{{ site_settings.logo_url }}" alt="Leaf Logo" style="max-width: 150px; max-height: 60px;">
+                </a>
+            {% else %}
+                <a href="{% url 'dashboard' %}" class="logo">Leaf</a>
+            {% endif %}
+            <div class="page-title">Messages</div>
         <div class="profile-box">
             <div class="profile-info">
                 <img src="{{ user.profile_image_url|default:'/static/default_profile.png' }}" alt="Profile" id="profile-img-display">
