--- a/myworld/leaf/members/templates/members_page.html
+++ b/myworld/leaf/members/templates/members_page.html
@@ -101,7 +101,13 @@
 <body>
     <div class="container">
         <div class="logo-section">
-            <img src="logo.png" alt="Profile">
+            {% if site_settings.logo_url %}
+                <div class="custom-logo">
+                    <img src="{{ site_settings.logo_url }}" alt="Leaf Logo" style="max-width: 500px; max-height: 300px;">
+                </div>
+            {% else %}
+                <div class="logo">Leaf</div>
+            {% endif %}
             <div class="slogan">YOUR GARDEN, YOUR WAY<br>FAST, EASY, NEARBY!</div>
         </div>
         <div class="menu">
@@ -125,3 +131,4 @@
     </div>
 </body>
 </html>
+
